# e172_console_impl

./: CMakeLists.txt  README.md  color.h  console_impl.cmake  consolerenderer.cpp  consolerenderer.h  main.cpp  painter.h  png_reader.h
examples/: CMakeLists.txt
examples/video_player/: CMakeLists.txt  main.cpp  mp4_decoder.cpp  mp4_decoder.h  painter.cpp  painter.h  videoplayer.cpp  videoplayer.h
src/: color.cpp  color.h  consolegraphicsprovider.cpp  consolegraphicsprovider.h  consolerenderer.cpp  consolerenderer.h  eventprovider.cpp  eventprovider.h  graphicsprovider.cpp  graphicsprovider.h  main.cpp  mp4_decoder.cpp  mp4_decoder.h  painter.cpp  pixelprimitives.cpp  pixelprimitives.h  png_reader.cpp  png_reader.h  renderer.cpp  renderer.h  surface.cpp  surface.h
src/colorizer/: colorizer.cpp  colorizer.h
